<resources>
    <string name="app_name">Assignment3</string>
    <string name="income">Income</string>
    <string name="expenses">Expenses</string>
    <string name="summary">Summary</string>
    <string name="action_settings">Settings</string>
    <string name="action_add">Add</string>
    <string name="et_Amount">Amount</string>
    <string name="et_Title">Title</string>
    <string name="addNew">Add new</string>
    <string name="btn_add">Add</string>
</resources>
