<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    >

    <EditText
        android:id="@+id/et_Amount"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/et_Amount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/et_Title"
        android:inputType="textPassword"
        android:maxLines="1"
        android:hint="@string/et_Title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
    </EditText>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:text="@string/btn_add"
        android:enabled="true"
        android:id="@+id/btnConfirmPassword"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />

</LinearLayout>